# itscam600plugins

./: README.md
capture_notifier/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  config.json
capture_notifier/src/: capture_notifier.cpp  capture_notifier.h.in  http_server.py
capture_notifier/src/camera/: channel.cpp  channel.h
capture_notifier/src/camera/itscam/: comment_parser.h  compat_pumatronix.cpp  itscam300.cpp  recebedados.h
capture_notifier/src/camera/jlib/jarch/: hw_os.h
capture_notifier/src/camera/jlib/jdebug/: jdebug.h
capture_notifier/src/config/: config_parser.cpp  config_parser.h
capture_notifier/src/helpers/: blocking_queue.cpp  blocking_queue.h  file_handler.cpp  file_handler.h  log.cpp
capture_notifier/src/http/: handle_post.cpp  handle_post.h  http_response.cpp  http_response.h
echo_server/: Dockerfile  README.md  build.sh  client.py  requirements.txt  server.py
protocol_webservice_json/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
protocol_webservice_json/src/: protocol_webservice_json.cpp  protocol_webservice_json.h.in
protocol_webservice_json/src/camera/: channel.cpp  channel.h
protocol_webservice_json/src/camera/itscam/: protocolo.h  recebedados.cpp
protocol_webservice_json/src/camera/jlib/jarch/impl/: hw_os_linux.h
protocol_webservice_json/src/camera/jlib/jfs/: filesystem.cpp  filesystem.h
protocol_webservice_json/src/camera/jlib/jos/: jtime.h
protocol_webservice_json/src/camera/jlib/jos/impl/: jtime_impl_linux.cpp
protocol_webservice_json/src/helpers/: blocking_queue.cpp  capture_vehicle.h  file_handler.cpp  file_handler.h
protocol_webservice_json/src/http/: handle_post.cpp  handle_post.h
protocol_webservice_multipart/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
protocol_webservice_multipart/src/: protocol_webservice_multipart.cpp  protocol_webservice_multipart.h.in
protocol_webservice_multipart/src/camera/: channel.cpp
protocol_webservice_multipart/src/camera/itscam/: compat_pumatronix.h  itscam300.h  protocolo.h
protocol_webservice_multipart/src/camera/jlib/jutils/: jutils_strings.h
protocol_webservice_multipart/src/helpers/: blocking_queue.h  file_handler.cpp  file_handler.h  log.h
protocol_webservice_multipart/src/http/: handle_post.cpp  handle_post.h
rtsp_server/: Dockerfile  README.md  build.sh  entrypoint.sh  mediamtx.yml  start_web_server.sh  video_browser.py
rtsp_server/templates/: index.html
